--- a/thesis.tex
+++ b/thesis.tex
@@ -52,7 +52,7 @@
 \renewcommand{\cftsubsecpagefont}{\normalsize}
 
 %Title of Thesis
-\title{The first measurement of the differential cross-sections for the electroweak production of ZZ in association with two jets in the four-leptons final state in 13 TeV proton-proton collision with the ATLAS detector.}
+\title{First differential cross-sections measurement for $ZZ$ production in association with two jets in the four-leptons final state in ATLAS.}
 \author{Prajita Bhattarai}
 \graduationmonth{May}
 \graduationyear{2023}
